--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,28 @@
 # pandas
 # matplotlib
 # hf_xet
-######
+###### UnComment the below for local use ##########
+# transformers==4.57.1
+# peft @ git+https://github.com/huggingface/peft.git@main
+# #peft==0.18.0.rc0
+# datasets==4.3.0
+# torch==2.9.0
+# evaluate==0.4.6
+# rouge-score==0.1.2
+# scikit-learn==1.7.2
+# accelerate==1.11.0
+# matplotlib==3.10.7
+# seaborn==0.13.2
+# wandb==0.22.3 
+# tabulate==0.9.0
+# numpy==1.26.4
+# thinc==8.2.5
+# spacy==3.7.5
+###########For Kaggle Use Below ##############
 transformers==4.57.1
 peft @ git+https://github.com/huggingface/peft.git@main
 #peft==0.18.0.rc0
 datasets==4.3.0
-torch==2.9.0
 evaluate==0.4.6
 rouge-score==0.1.2
 scikit-learn==1.7.2
@@ -25,3 +41,4 @@ tabulate==0.9.0
 numpy==1.26.4
 thinc==8.2.5
 spacy==3.7.5
+protobuf==4.25.3
