--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,13 @@
 **/outputs/**
 **/assignment/**
 **/finalexam/**
+**/new-tests/class*
+**/new-tests/summ*
+**/new-tests/eval*
+**/new-tests/train*
+**.png
+**.json
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
