--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ transformers==4.57.1
 peft @ git+https://github.com/huggingface/peft.git@main
 #peft==0.18.0.rc0
 datasets==4.3.0
-torch==2.9.0
+torch==2.8.0
 evaluate==0.4.6
 rouge-score==0.1.2
 scikit-learn==1.7.2
@@ -16,3 +16,26 @@ numpy==1.26.4
 thinc==8.2.5
 spacy==3.7.5
 notebook==7.2.2
+##protobuf added
+protobuf<4.0
+evaluate
+rouge_score
+#########################
+# !pip install \
+#  transformers==4.57.1 \
+#  git+https://github.com/huggingface/peft.git@main \
+#  datasets==4.3.0 \
+#  torch==2.8.0 \
+#  evaluate==0.4.6 \
+#  rouge-score==0.1.2 \
+#  scikit-learn==1.7.2 \
+#  accelerate==1.11.0 \
+#  matplotlib==3.10.7 \
+#  seaborn==0.13.2 \
+#  wandb==0.22.3 \
+#  tabulate==0.9.0 \
+#  numpy==1.26.4 \
+#  thinc==8.2.5 \
+#  spacy==3.7.5 \
+#  notebook==7.2.2 \
+#  "protobuf<4.0"
